Changed overflow-y of alert-box from 'auto' to 'initial'. Solves issue #16911.

--- a/static/styles/alerts.css
+++ b/static/styles/alerts.css
@@ -53,7 +53,7 @@ $alert-error-red: hsl(0, 80%, 40%);
     margin-left: calc(50% - 450px);
     z-index: 220;
     max-height: 100%;
-    overflow-y: auto;
+    overflow-y: unset;
     overscroll-behavior: contain;
 
     .stacktrace {
